--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wire-types-javascript",
+  "name": "@momentohq/generated-types",
   "description": "Types for Momento services",
   "version": "0.0.1",
   "main": "index.js",
