--- a/csharp/Momento.csproj
+++ b/csharp/Momento.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
   </PropertyGroup>
 
 <ItemGroup>
@@ -14,7 +15,7 @@
     <None Remove="Google.Protobuf" />
     <None Remove="Grpc.Tools" />
     <None Remove="src\" />
-    <None Remove="Grpc.Net.Client" />
+    <None Remove="Grpc.Core" />
     <None Remove="Grpc" />
   </ItemGroup>
   <ItemGroup>
@@ -23,10 +24,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
+    <PackageReference Include="Grpc.Core" Version="2.45.0" />
     <PackageReference Include="Grpc" Version="2.41.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
   </ItemGroup>
 </Project>
+
