--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -157,3 +157,24 @@ jobs:
             cargo build
           popd
         shell: bash
+
+      - name: Update Cargo Version
+        run: |
+          pushd rust
+            chmod +x set_cargo_package_version.sh
+            ./set_cargo_package_version.sh ${{needs.release.outputs.version}}
+          popd
+        shell: bash
+
+      - name: Release dry run
+        env:
+          # TODO: Match the token with https://github.com/momentohq/client-sdk-rust/blob/main/.github/workflows/cd.yml
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_PUBLISH_TOKEN }}
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
+          pushd rust
+            cargo publish --verbose --allow-dirty --no-verify --dry-run
+          popd
+        shell: bash
