--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -203,15 +203,6 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Setup Cargo Registry
-        run: |
-          echo "[registries.momento]" >> ~/.cargo/config.toml
-          echo 'index = "https://momento.jfrog.io/artifactory/git/cargo-public.git"' >> ~/.cargo/config.toml
-
-          echo "[registries.momento]" >> ~/.cargo/credentials.toml
-          echo 'token = "Bearer ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }}"' >> ~/.cargo/credentials.toml
-        shell: bash
-
       - name: Install protoc
         run: ./install_protoc.sh
 
@@ -226,7 +217,7 @@ jobs:
           popd
         shell: bash
 
-      - name: Build and Release
+      - name: Build
         run: |
           set -e
           set -x
@@ -235,8 +226,18 @@ jobs:
             VERSION="${{needs.release.outputs.version}}"
             ./generate_protos.sh
             cargo build --release
-            # FIXME
-            # cargo publish --registry momento --allow-dirty --no-verify --dry-run
-            curl -u deploy-user:${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }} -XPUT "https://momento.jfrog.io/artifactory/cargo-public/crates/momento-protos-${VERSION}.crate" -T ./target/package/momento-protos-${VERSION}.crate
+          popd
+        shell: bash
+
+      - name: Release
+        env:
+          # TODO: Match the token with https://github.com/momentohq/client-sdk-rust/blob/main/.github/workflows/cd.yml
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_PUBLISH_TOKEN }}
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
+          pushd rust
+            cargo publish --allow-dirty --no-verify
           popd
         shell: bash
